infrastructure/controllers/staging/argo-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard
spec:
  ingressClassName: traefik
  rules:
    # to be accessed from LAN/VPN only - DNS in CF pointing to local IP
    - host: rollouts.milanoid.net
      http:
        paths:
          - backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
            path: /
            pathType: Prefix
